--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prettier:check": "prettier . --check",
     "eslint": "eslint .",
     "deploy:commit": "git add dist -f && git commit -m \"Deployment commit\"",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+	"tailwind": "npx @tailwindcss/cli -i ./src/styles.css -o ./src/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -37,5 +38,9 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.14",
+    "tailwindcss": "^4.1.14"
   }
 }
